2012-07-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/plugutils.c (_add_plugin_preference): New. Moved here from store.c.
	(plug_create_from_nvti_and_prefs): New. A reduced version of
	store_load_plugin from store.c.

	* misc/plugutils.h: Added proto accordingly.

	* misc/store.c, misc/store.h: Removed no unneeded module.

	* COPYING: Removed entry for removed module.

	* misc/CMakeLists.txt: Removed handling of module store.

2012-07-11  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/store.c (store_init): Removed. The initialization is
	now done by scanner directly via nvticache_new().
	(nvti_cache): Removed. This global variable is not necessary
	anymore because scanner will handle the variable in a global context.
        (store_load_plugin): Use the nvticache fomr the arglist instead the
	the static global one.
        (store_plugin): Removed. The remaining simple calls for nvti_cache
	were moved to the respective code in the Scanner.

        * misc/store.h: Removed protos accordingly.

	* CMakeLists.txt: Also install nvticache.h.

2012-07-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Post branch version bump. (A little late as the branch actually
	happened already).

	* CMakeLists.txt: Set version to 6.0.0 and status to beta.

2012-07-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/store.c (store_plugin): Reduced code by using new function
	nvticache_add().

2012-07-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/nvticache.c (nvticache_add): New function to write a nvti file
	to the cache.

	* base/nvticache.h: Add proto accordingly.

2012-07-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/store.c (store_plugin): Removed code that handles the
	unused variable "path".

2012-07-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/plugutils.c (proto_post_wrapped): Resolved unnecessary
	call of arg_get_value.
