@@ -1,3 +1,8 @@
+2012-07-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	* nasl/exec.c (execute_nasl_script): Removed. This was marked deprecated since
+	two major releases already.
+
 2012-07-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* misc/plugutils.c (_add_plugin_preference): New. Moved here from store.c.
